nodejs/versioned_docs/version-1.21/api/class-test.mdx
---
id: class-test
title: "Playwright Test"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Test provides a `test` function to declare tests and [`expect` function](https://jestjs.io/docs/expect) to write assertions.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('basic test', async ({ page }) => {
  await page.goto('https://playwright.dev/');
  const name = await page.innerText('.navbar__title');
  expect(name).toBe('Playwright');
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('basic test', async ({ page }) => {
  await page.goto('https://playwright.dev/');
  const name = await page.innerText('.navbar__title');
  expect(name).toBe('Playwright');
});
```

</TabItem>
</Tabs>


- [test(title, testFunction)](./api/class-test.mdx#test-call)
- [test.afterAll(hookFunction)](./api/class-test.mdx#test-after-all)
- [test.afterEach(hookFunction)](./api/class-test.mdx#test-after-each)
- [test.beforeAll(hookFunction)](./api/class-test.mdx#test-before-all)
- [test.beforeEach(hookFunction)](./api/class-test.mdx#test-before-each)
- [test.describe(title, callback)](./api/class-test.mdx#test-describe)
- [test.describe.configure([options])](./api/class-test.mdx#test-describe-configure)
- [test.describe.only(title, callback)](./api/class-test.mdx#test-describe-only)
- [test.describe.parallel(title, callback)](./api/class-test.mdx#test-describe-parallel)
- [test.describe.parallel.only(title, callback)](./api/class-test.mdx#test-describe-parallel-only)
- [test.describe.serial(title, callback)](./api/class-test.mdx#test-describe-serial)
- [test.describe.serial.only(title, callback)](./api/class-test.mdx#test-describe-serial-only)
- [test.describe.skip(title, callback)](./api/class-test.mdx#test-describe-skip)
- [test.extend(fixtures)](./api/class-test.mdx#test-extend)
- [test.fail()](./api/class-test.mdx#test-fail-1)
- [test.fail(condition[, description])](./api/class-test.mdx#test-fail-2)
- [test.fail(callback[, description])](./api/class-test.mdx#test-fail-3)
- [test.fixme(title, testFunction)](./api/class-test.mdx#test-fixme-1)
- [test.fixme()](./api/class-test.mdx#test-fixme-2)
- [test.fixme(condition[, description])](./api/class-test.mdx#test-fixme-3)
- [test.fixme(callback[, description])](./api/class-test.mdx#test-fixme-4)
- [test.info()](./api/class-test.mdx#test-info)
- [test.only(title, testFunction)](./api/class-test.mdx#test-only)
- [test.setTimeout(timeout)](./api/class-test.mdx#test-set-timeout)
- [test.skip(title, testFunction)](./api/class-test.mdx#test-skip-1)
- [test.skip()](./api/class-test.mdx#test-skip-2)
- [test.skip(condition[, description])](./api/class-test.mdx#test-skip-3)
- [test.skip(callback[, description])](./api/class-test.mdx#test-skip-4)
- [test.slow()](./api/class-test.mdx#test-slow-1)
- [test.slow(condition[, description])](./api/class-test.mdx#test-slow-2)
- [test.slow(callback[, description])](./api/class-test.mdx#test-slow-3)
- [test.step(title, body)](./api/class-test.mdx#test-step)
- [test.use(options)](./api/class-test.mdx#test-use)
- [test.expect](./api/class-test.mdx#test-expect)

## test(title, testFunction) {#test-call}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-call-option-title"/> &#60;[string]&#62; Test title.<a href="#test-call-option-title" class="list-anchor">#</a>
- `testFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-call-option-test-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Test function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-call-option-test-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-call-return"/> &#60;[void]&#62;<a href="#test-call-return" class="list-anchor">#</a>

Declares a test.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('basic test', async ({ page }) => {
  await page.goto('https://playwright.dev/');
  const name = await page.innerText('.navbar__title');
  expect(name).toBe('Playwright');
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('basic test', async ({ page }) => {
  await page.goto('https://playwright.dev/');
  const name = await page.innerText('.navbar__title');
  expect(name).toBe('Playwright');
});
```

</TabItem>
</Tabs>

## test.afterAll(hookFunction) {#test-after-all}
- `hookFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-after-all-option-hook-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Hook function that takes one or two arguments: an object with worker fixtures and optional [TestInfo].<a href="#test-after-all-option-hook-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-after-all-return"/> &#60;[void]&#62;<a href="#test-after-all-return" class="list-anchor">#</a>

Declares an `afterAll` hook that is executed once per worker after all tests. When called in the scope of a test file, runs after all tests in the file. When called inside a [test.describe(title, callback)](./api/class-test.mdx#test-describe) group, runs after all tests in the group. If multiple `afterAll` hooks are added, they will run in the order of their registration.

Note that worker process is restarted on test failures, and `afterAll` hook runs again in the new worker. Learn more about [workers and failures](../test-retries.mdx).

## test.afterEach(hookFunction) {#test-after-each}
- `hookFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-after-each-option-hook-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Hook function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-after-each-option-hook-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-after-each-return"/> &#60;[void]&#62;<a href="#test-after-each-return" class="list-anchor">#</a>

Declares an `afterEach` hook that is executed after each test. When called in the scope of a test file, runs after each test in the file. When called inside a [test.describe(title, callback)](./api/class-test.mdx#test-describe) group, runs after each test in the group. If multiple `afterEach` hooks are added, they will run in the order of their registration.

You can access all the same [Fixtures] as the test function itself, and also the [TestInfo] object that gives a lot of useful information. For example, you can check whether the test succeeded or failed.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// example.spec.ts
import { test, expect } from '@playwright/test';

test.afterEach(async ({ page }, testInfo) => {
  console.log(`Finished ${testInfo.title} with status ${testInfo.status}`);

  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`Did not run as expected, ended up at ${page.url()}`);
});

test('my test', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
// example.spec.js
const { test, expect } = require('@playwright/test');

test.afterEach(async ({ page }, testInfo) => {
  console.log(`Finished ${testInfo.title} with status ${testInfo.status}`);

  if (testInfo.status !== testInfo.expectedStatus)
    console.log(`Did not run as expected, ended up at ${page.url()}`);
});

test('my test', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.beforeAll(hookFunction) {#test-before-all}
- `hookFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-before-all-option-hook-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Hook function that takes one or two arguments: an object with worker fixtures and optional [TestInfo].<a href="#test-before-all-option-hook-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-before-all-return"/> &#60;[void]&#62;<a href="#test-before-all-return" class="list-anchor">#</a>

Declares a `beforeAll` hook that is executed once per worker process before all tests. When called in the scope of a test file, runs before all tests in the file. When called inside a [test.describe(title, callback)](./api/class-test.mdx#test-describe) group, runs before all tests in the group. If multiple `beforeAll` hooks are added, they will run in the order of their registration.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// example.spec.ts
import { test, expect } from '@playwright/test';

test.beforeAll(async () => {
  console.log('Before tests');
});

test.afterAll(async () => {
  console.log('After tests');
});

test('my test', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
// example.spec.js
const { test, expect } = require('@playwright/test');

test.beforeAll(async () => {
  console.log('Before tests');
});

test.afterAll(async () => {
  console.log('After tests');
});

test('my test', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

Note that worker process is restarted on test failures, and `beforeAll` hook runs again in the new worker. Learn more about [workers and failures](../test-retries.mdx).

You can use [test.afterAll(hookFunction)](./api/class-test.mdx#test-after-all) to teardown any resources set up in `beforeAll`.

## test.beforeEach(hookFunction) {#test-before-each}
- `hookFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-before-each-option-hook-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Hook function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-before-each-option-hook-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-before-each-return"/> &#60;[void]&#62;<a href="#test-before-each-return" class="list-anchor">#</a>

Declares a `beforeEach` hook that is executed before each test. When called in the scope of a test file, runs before each test in the file. When called inside a [test.describe(title, callback)](./api/class-test.mdx#test-describe) group, runs before each test in the group.  If multiple `beforeEach` hooks are added, they will run in the order of their registration.

You can access all the same [Fixtures] as the test function itself, and also the [TestInfo] object that gives a lot of useful information. For example, you can navigate the page before starting the test.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// example.spec.ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({ page }, testInfo) => {
  console.log(`Running ${testInfo.title}`);
  await page.goto('https://my.start.url/');
});

test('my test', async ({ page }) => {
  expect(page.url()).toBe('https://my.start.url/');
});
```

</TabItem>
<TabItem value="js">

```js
// example.spec.js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({ page }, testInfo) => {
  console.log(`Running ${testInfo.title}`);
  await page.goto('https://my.start.url/');
});

test('my test', async ({ page }) => {
  expect(page.url()).toBe('https://my.start.url/');
});
```

</TabItem>
</Tabs>

You can use [test.afterEach(hookFunction)](./api/class-test.mdx#test-after-each) to teardown any resources set up in `beforeEach`.

## test.describe(title, callback) {#test-describe}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe(title, callback)](./api/class-test.mdx#test-describe). Any tests added in this callback will belong to the group.<a href="#test-describe-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-return"/> &#60;[void]&#62;<a href="#test-describe-return" class="list-anchor">#</a>

Declares a group of tests.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe('two tests', () => {
  test('one', async ({ page }) => {
    // ...
  });

  test('two', async ({ page }) => {
    // ...
  });
});
```

</TabItem>
<TabItem value="js">

```js
test.describe('two tests', () => {
  test('one', async ({ page }) => {
    // ...
  });

  test('two', async ({ page }) => {
    // ...
  });
});
```

</TabItem>
</Tabs>

## test.describe.configure([options]) {#test-describe-configure}
- `options?` &#60;[Object]&#62;
  - `mode?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-configure-option-mode"/> &#60;"parallel"|"serial"&#62;<a href="#test-describe-configure-option-mode" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-configure-return"/> &#60;[void]&#62;<a href="#test-describe-configure-return" class="list-anchor">#</a>

Set execution mode of execution for the enclosing scope. Can be executed either on the top level or inside a describe. Configuration applies to the entire scope, regardless of whether it run before or after the test declaration.

Learn more about the execution modes [here](../test-parallel.mdx).

Running tests in parallel:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// Run all the tests in the file concurrently using parallel workers.
test.describe.configure({ mode: 'parallel' });
test('runs in parallel 1', async ({ page }) => {});
test('runs in parallel 2', async ({ page }) => {});
```

</TabItem>
<TabItem value="js">

```js
// Run all the tests in the file concurrently using parallel workers.
test.describe.configure({ mode: 'parallel' });
test('runs in parallel 1', async ({ page }) => {});
test('runs in parallel 2', async ({ page }) => {});
```

</TabItem>
</Tabs>

Running tests sequentially:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// Annotate tests as inter-dependent.
test.describe.configure({ mode: 'serial' });
test('runs first', async ({ page }) => {});
test('runs second', async ({ page }) => {});
```

</TabItem>
<TabItem value="js">

```js
// Annotate tests as inter-dependent.
test.describe.configure({ mode: 'serial' });
test('runs first', async ({ page }) => {});
test('runs second', async ({ page }) => {});
```

</TabItem>
</Tabs>

## test.describe.only(title, callback) {#test-describe-only}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-only-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-only-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-only-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.only(title, callback)](./api/class-test.mdx#test-describe-only). Any tests added in this callback will belong to the group.<a href="#test-describe-only-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-only-return"/> &#60;[void]&#62;<a href="#test-describe-only-return" class="list-anchor">#</a>

Declares a focused group of tests. If there are some focused tests or suites, all of them will be run but nothing else.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe.only('focused group', () => {
  test('in the focused group', async ({ page }) => {
    // This test will run
  });
});
test('not in the focused group', async ({ page }) => {
  // This test will not run
});
```

</TabItem>
<TabItem value="js">

```js
test.describe.only('focused group', () => {
  test('in the focused group', async ({ page }) => {
    // This test will run
  });
});
test('not in the focused group', async ({ page }) => {
  // This test will not run
});
```

</TabItem>
</Tabs>

## test.describe.parallel(title, callback) {#test-describe-parallel}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-parallel-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.parallel(title, callback)](./api/class-test.mdx#test-describe-parallel). Any tests added in this callback will belong to the group.<a href="#test-describe-parallel-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-return"/> &#60;[void]&#62;<a href="#test-describe-parallel-return" class="list-anchor">#</a>

Declares a group of tests that could be run in parallel. By default, tests in a single test file run one after another, but using [test.describe.parallel(title, callback)](./api/class-test.mdx#test-describe-parallel) allows them to run in parallel.

:::note
See [test.describe.configure([options])](./api/class-test.mdx#test-describe-configure) for the preferred way of configuring the execution mode.
:::

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe.parallel('group', () => {
  test('runs in parallel 1', async ({ page }) => {});
  test('runs in parallel 2', async ({ page }) => {});
});
```

</TabItem>
<TabItem value="js">

```js
test.describe.parallel('group', () => {
  test('runs in parallel 1', async ({ page }) => {});
  test('runs in parallel 2', async ({ page }) => {});
});
```

</TabItem>
</Tabs>

Note that parallel tests are executed in separate processes and cannot share any state or global variables. Each of the parallel tests executes all relevant hooks.

## test.describe.parallel.only(title, callback) {#test-describe-parallel-only}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-only-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-parallel-only-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-only-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.parallel.only(title, callback)](./api/class-test.mdx#test-describe-parallel-only). Any tests added in this callback will belong to the group.<a href="#test-describe-parallel-only-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-parallel-only-return"/> &#60;[void]&#62;<a href="#test-describe-parallel-only-return" class="list-anchor">#</a>

Declares a focused group of tests that could be run in parallel. This is similar to [test.describe.parallel(title, callback)](./api/class-test.mdx#test-describe-parallel), but focuses the group. If there are some focused tests or suites, all of them will be run but nothing else.

## test.describe.serial(title, callback) {#test-describe-serial}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-serial-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.serial(title, callback)](./api/class-test.mdx#test-describe-serial). Any tests added in this callback will belong to the group.<a href="#test-describe-serial-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-return"/> &#60;[void]&#62;<a href="#test-describe-serial-return" class="list-anchor">#</a>

Declares a group of tests that should always be run serially. If one of the tests fails, all subsequent tests are skipped. All tests in a group are retried together.

:::note
See [test.describe.configure([options])](./api/class-test.mdx#test-describe-configure) for the preferred way of configuring the execution mode.
:::

:::note
Using serial is not recommended. It is usually better to make your tests isolated, so they can be run independently.
:::

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe.serial('group', () => {
  test('runs first', async ({ page }) => {});
  test('runs second', async ({ page }) => {});
});
```

</TabItem>
<TabItem value="js">

```js
test.describe.serial('group', () => {
  test('runs first', async ({ page }) => {});
  test('runs second', async ({ page }) => {});
});
```

</TabItem>
</Tabs>

## test.describe.serial.only(title, callback) {#test-describe-serial-only}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-only-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-serial-only-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-only-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.serial.only(title, callback)](./api/class-test.mdx#test-describe-serial-only). Any tests added in this callback will belong to the group.<a href="#test-describe-serial-only-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-serial-only-return"/> &#60;[void]&#62;<a href="#test-describe-serial-only-return" class="list-anchor">#</a>

Declares a focused group of tests that should always be run serially. If one of the tests fails, all subsequent tests are skipped. All tests in a group are retried together. If there are some focused tests or suites, all of them will be run but nothing else.

:::note
Using serial is not recommended. It is usually better to make your tests isolated, so they can be run independently.
:::

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe.serial.only('group', () => {
  test('runs first', async ({ page }) => {
  });
  test('runs second', async ({ page }) => {
  });
});
```

</TabItem>
<TabItem value="js">

```js
test.describe.serial.only('group', () => {
  test('runs first', async ({ page }) => {
  });
  test('runs second', async ({ page }) => {
  });
});
```

</TabItem>
</Tabs>

## test.describe.skip(title, callback) {#test-describe-skip}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-skip-option-title"/> &#60;[string]&#62; Group title.<a href="#test-describe-skip-option-title" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-skip-option-callback"/> &#60;[function]&#62; A callback that is run immediately when calling [test.describe.skip(title, callback)](./api/class-test.mdx#test-describe-skip). Any tests added in this callback will belong to the group, and will not be run.<a href="#test-describe-skip-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-describe-skip-return"/> &#60;[void]&#62;<a href="#test-describe-skip-return" class="list-anchor">#</a>

Declares a skipped test group, similarly to [test.describe(title, callback)](./api/class-test.mdx#test-describe). Tests in the skipped group are never run.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.describe.skip('skipped group', () => {
  test('example', async ({ page }) => {
    // This test will not run
  });
});
```

</TabItem>
<TabItem value="js">

```js
test.describe.skip('skipped group', () => {
  test('example', async ({ page }) => {
    // This test will not run
  });
});
```

</TabItem>
</Tabs>

## test.extend(fixtures) {#test-extend}
- `fixtures`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-extend-option-fixtures"/> &#60;[Object]&#62; An object containing fixtures and/or options. Learn more about [fixtures format](../test-fixtures.mdx).<a href="#test-extend-option-fixtures" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-extend-return"/> &#60;[Test]&#62;<a href="#test-extend-return" class="list-anchor">#</a>

Extends the `test` object by defining fixtures and/or options that can be used in the tests.

First define a fixture and/or an option.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test as base } from '@playwright/test';
import { TodoPage } from './todo-page';

export type Options = { defaultItem: string };

// Extend basic test by providing a "defaultItem" option and a "todoPage" fixture.
export const test = base.extend<Options & { todoPage: TodoPage }>({
  // Define an option and provide a default value.
  // We can later override it in the config.
  defaultItem: ['Do stuff', { option: true }],

  // Define a fixture. Note that it can use built-in fixture "page"
  // and a new option "defaultItem".
  todoPage: async ({ page, defaultItem }, use) => {
    const todoPage = new TodoPage(page);
    await todoPage.goto();
    await todoPage.addToDo(defaultItem);
    await use(todoPage);
    await todoPage.removeAll();
  },
});
```

</TabItem>
<TabItem value="js">

```js
// my-test.js
const base = require('@playwright/test');
const { TodoPage } = require('./todo-page');

// Extend basic test by providing a "defaultItem" option and a "todoPage" fixture.
exports.test = base.test.extend({
  // Define an option and provide a default value.
  // We can later override it in the config.
  defaultItem: ['Do stuff', { option: true }],

  // Define a fixture. Note that it can use built-in fixture "page"
  // and a new option "defaultItem".
  todoPage: async ({ page, defaultItem }, use) => {
    const todoPage = new TodoPage(page);
    await todoPage.goto();
    await todoPage.addToDo(defaultItem);
    await use(todoPage);
    await todoPage.removeAll();
  },
});
```

</TabItem>
</Tabs>

Then use the fixture in the test.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// example.spec.ts
import { test } from './my-test';

test('test 1', async ({ todoPage }) => {
  await todoPage.addToDo('my todo');
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
// example.spec.js
const { test } = require('./my-test');

test('test 1', async ({ todoPage }) => {
  await todoPage.addToDo('my todo');
  // ...
});
```

</TabItem>
</Tabs>

Configure the option in config file.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
// playwright.config.ts
import { PlaywrightTestConfig } from '@playwright/test';
import { Options } from './my-test';

const config: PlaywrightTestConfig<Options> = {
  projects: [
    {
      name: 'shopping',
      use: { defaultItem: 'Buy milk' },
    },
    {
      name: 'wellbeing',
      use: { defaultItem: 'Exercise!' },
    },
  ]
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig<{ defaultItem: string }>} */
const config = {
  projects: [
    {
      name: 'shopping',
      use: { defaultItem: 'Buy milk' },
    },
    {
      name: 'wellbeing',
      use: { defaultItem: 'Exercise!' },
    },
  ]
};

module.exports = config;
```

</TabItem>
</Tabs>

Learn more about [fixtures](../test-fixtures.mdx) and [parametrizing tests](../test-parameterize.mdx).

## test.fail() {#test-fail-1}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-1-return"/> &#60;[void]&#62;<a href="#test-fail-1-return" class="list-anchor">#</a>

Unconditonally marks a test as "should fail". Playwright Test runs this test and ensures that it is actually failing. This is useful for documentation purposes to acknowledge that some functionality is broken until it is fixed.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('not yet ready', async ({ page }) => {
  test.fail();
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('not yet ready', async ({ page }) => {
  test.fail();
  // ...
});
```

</TabItem>
</Tabs>

## test.fail(condition[, description]) {#test-fail-2}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-2-option-condition"/> &#60;[boolean]&#62; Test is marked as "should fail" when the condition is `true`.<a href="#test-fail-2-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-2-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-fail-2-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-2-return"/> &#60;[void]&#62;<a href="#test-fail-2-return" class="list-anchor">#</a>

Conditionally mark a test as "should fail" with an optional description.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('fail in WebKit', async ({ page, browserName }) => {
  test.fail(browserName === 'webkit', 'This feature is not implemented for Mac yet');
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('fail in WebKit', async ({ page, browserName }) => {
  test.fail(browserName === 'webkit', 'This feature is not implemented for Mac yet');
  // ...
});
```

</TabItem>
</Tabs>

## test.fail(callback[, description]) {#test-fail-3}
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-3-option-condition"/> &#60;[function]\([Fixtures]\):[boolean]&#62; A function that returns whether to mark as "should fail", based on test fixtures. Test or tests are marked as "should fail" when the return value is `true`.<a href="#test-fail-3-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-3-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-fail-3-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fail-3-return"/> &#60;[void]&#62;<a href="#test-fail-3-return" class="list-anchor">#</a>

Conditionally mark all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group as "should fail".

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.fail(({ browserName }) => browserName === 'webkit');

test('fail in WebKit 1', async ({ page }) => {
  // ...
});
test('fail in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.fail(({ browserName }) => browserName === 'webkit');

test('fail in WebKit 1', async ({ page }) => {
  // ...
});
test('fail in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.fixme(title, testFunction) {#test-fixme-1}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-1-option-title"/> &#60;[string]&#62; Test title.<a href="#test-fixme-1-option-title" class="list-anchor">#</a>
- `testFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-1-option-test-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Test function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-fixme-1-option-test-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-1-return"/> &#60;[void]&#62;<a href="#test-fixme-1-return" class="list-anchor">#</a>

Declares a test to be fixed, similarly to [test(title, testFunction)](./api/class-test.mdx#test-call). This test will not be run.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.fixme('test to be fixed', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.fixme('test to be fixed', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.fixme() {#test-fixme-2}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-2-return"/> &#60;[void]&#62;<a href="#test-fixme-2-return" class="list-anchor">#</a>

Mark a test as "fixme", with the intention to fix it. Test is immediately aborted when you call [test.fixme()](./api/class-test.mdx#test-fixme-2).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('test to be fixed', async ({ page }) => {
  test.fixme();
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('test to be fixed', async ({ page }) => {
  test.fixme();
  // ...
});
```

</TabItem>
</Tabs>

Mark all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group as "fixme".

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.fixme();

test('test to be fixed 1', async ({ page }) => {
  // ...
});
test('test to be fixed 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.fixme();

test('test to be fixed 1', async ({ page }) => {
  // ...
});
test('test to be fixed 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.fixme(condition[, description]) {#test-fixme-3}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-3-option-condition"/> &#60;[boolean]&#62; Test is marked as "fixme" when the condition is `true`.<a href="#test-fixme-3-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-3-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-fixme-3-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-3-return"/> &#60;[void]&#62;<a href="#test-fixme-3-return" class="list-anchor">#</a>

Conditionally mark a test as "fixme" with an optional description.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('broken in WebKit', async ({ page, browserName }) => {
  test.fixme(browserName === 'webkit', 'This feature is not implemented on Mac yet');
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('broken in WebKit', async ({ page, browserName }) => {
  test.fixme(browserName === 'webkit', 'This feature is not implemented on Mac yet');
  // ...
});
```

</TabItem>
</Tabs>

## test.fixme(callback[, description]) {#test-fixme-4}
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-4-option-condition"/> &#60;[function]\([Fixtures]\):[boolean]&#62; A function that returns whether to mark as "fixme", based on test fixtures. Test or tests are marked as "fixme" when the return value is `true`.<a href="#test-fixme-4-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-4-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-fixme-4-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-fixme-4-return"/> &#60;[void]&#62;<a href="#test-fixme-4-return" class="list-anchor">#</a>

Conditionally mark all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group as "fixme".

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.fixme(({ browserName }) => browserName === 'webkit');

test('broken in WebKit 1', async ({ page }) => {
  // ...
});
test('broken in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.fixme(({ browserName }) => browserName === 'webkit');

test('broken in WebKit 1', async ({ page }) => {
  // ...
});
test('broken in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.info() {#test-info}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-info-return"/> &#60;[TestInfo]&#62;<a href="#test-info-return" class="list-anchor">#</a>

Returns information about the currently running test. This method can only be called during the test execution, otherwise it throws.

## test.only(title, testFunction) {#test-only}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-only-option-title"/> &#60;[string]&#62; Test title.<a href="#test-only-option-title" class="list-anchor">#</a>
- `testFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-only-option-test-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Test function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-only-option-test-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-only-return"/> &#60;[void]&#62;<a href="#test-only-return" class="list-anchor">#</a>

Declares a focused test. If there are some focused tests or suites, all of them will be run but nothing else.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
test.only('focus this test', async ({ page }) => {
  // Run only focused tests in the entire project.
});
```

</TabItem>
<TabItem value="js">

```js
test.only('focus this test', async ({ page }) => {
  // Run only focused tests in the entire project.
});
```

</TabItem>
</Tabs>

## test.setTimeout(timeout) {#test-set-timeout}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-set-timeout-option-timeout"/> &#60;[number]&#62; Timeout in milliseconds.<a href="#test-set-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-set-timeout-return"/> &#60;[void]&#62;<a href="#test-set-timeout-return" class="list-anchor">#</a>

Changes the timeout for the test. Zero means no timeout. Learn more about [various timeouts](../test-timeouts.mdx).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('very slow test', async ({ page }) => {
  test.setTimeout(120000);
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('very slow test', async ({ page }) => {
  test.setTimeout(120000);
  // ...
});
```

</TabItem>
</Tabs>

Changing timeout from a slow hook:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  test.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({ page }, testInfo) => {
  // Extend timeout for all tests running this hook by 30 seconds.
  test.setTimeout(testInfo.timeout + 30000);
});
```

</TabItem>
</Tabs>

Timeout for the currently running test is available through [testInfo.timeout](./api/class-testinfo.mdx#test-info-timeout).

## test.skip(title, testFunction) {#test-skip-1}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-1-option-title"/> &#60;[string]&#62; Test title.<a href="#test-skip-1-option-title" class="list-anchor">#</a>
- `testFunction`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-1-option-test-function"/> &#60;[function]\([Fixtures], [TestInfo]\)&#62; Test function that takes one or two arguments: an object with fixtures and optional [TestInfo].<a href="#test-skip-1-option-test-function" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-1-return"/> &#60;[void]&#62;<a href="#test-skip-1-return" class="list-anchor">#</a>

Declares a skipped test, similarly to [test(title, testFunction)](./api/class-test.mdx#test-call). Skipped test is never run.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.skip('broken test', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.skip('broken test', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.skip() {#test-skip-2}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-2-return"/> &#60;[void]&#62;<a href="#test-skip-2-return" class="list-anchor">#</a>

Unconditionally skip a test. Test is immediately aborted when you call [test.skip()](./api/class-test.mdx#test-skip-2).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('skipped test', async ({ page }) => {
  test.skip();
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('skipped test', async ({ page }) => {
  test.skip();
  // ...
});
```

</TabItem>
</Tabs>

Unconditionally skip all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.skip();

test('skipped test 1', async ({ page }) => {
  // ...
});
test('skipped test 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.skip();

test('skipped test 1', async ({ page }) => {
  // ...
});
test('skipped test 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.skip(condition[, description]) {#test-skip-3}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-3-option-condition"/> &#60;[boolean]&#62; A skip condition. Test is skipped when the condition is `true`.<a href="#test-skip-3-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-3-option-description"/> &#60;[void]|[string]&#62; Optional description that will be reflected in a test report.<a href="#test-skip-3-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-3-return"/> &#60;[void]&#62;<a href="#test-skip-3-return" class="list-anchor">#</a>

Conditionally skip a test with an optional description.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('skip in WebKit', async ({ page, browserName }) => {
  test.skip(browserName === 'webkit', 'This feature is not implemented for Mac');
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('skip in WebKit', async ({ page, browserName }) => {
  test.skip(browserName === 'webkit', 'This feature is not implemented for Mac');
  // ...
});
```

</TabItem>
</Tabs>

Skip from [test.beforeEach(hookFunction)](./api/class-test.mdx#test-before-each) hook:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.beforeEach(async ({ page }) => {
  test.skip(process.env.APP_VERSION === 'v1', 'There are no settings in v1');
  await page.goto('/settings');
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.beforeEach(async ({ page }) => {
  test.skip(process.env.APP_VERSION === 'v1', 'There are no settings in v1');
  await page.goto('/settings');
});
```

</TabItem>
</Tabs>

## test.skip(callback[, description]) {#test-skip-4}
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-4-option-condition"/> &#60;[function]\([Fixtures]\):[boolean]&#62; A function that returns whether to skip, based on test fixtures. Test or tests are skipped when the return value is `true`.<a href="#test-skip-4-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-4-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-skip-4-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-skip-4-return"/> &#60;[void]&#62;<a href="#test-skip-4-return" class="list-anchor">#</a>

Conditionally skips all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.skip(({ browserName }) => browserName === 'webkit');

test('skip in WebKit 1', async ({ page }) => {
  // ...
});
test('skip in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.skip(({ browserName }) => browserName === 'webkit');

test('skip in WebKit 1', async ({ page }) => {
  // ...
});
test('skip in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.slow() {#test-slow-1}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-1-return"/> &#60;[void]&#62;<a href="#test-slow-1-return" class="list-anchor">#</a>

Unconditionally marks a test as "slow". Slow test will be given triple the default timeout.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('slow test', async ({ page }) => {
  test.slow();
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('slow test', async ({ page }) => {
  test.slow();
  // ...
});
```

</TabItem>
</Tabs>

## test.slow(condition[, description]) {#test-slow-2}
- `condition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-2-option-condition"/> &#60;[boolean]&#62; Test is marked as "slow" when the condition is `true`.<a href="#test-slow-2-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-2-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-slow-2-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-2-return"/> &#60;[void]&#62;<a href="#test-slow-2-return" class="list-anchor">#</a>

Conditionally mark a test as "slow" with an optional description. Slow test will be given triple the default timeout.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('slow in WebKit', async ({ page, browserName }) => {
  test.slow(browserName === 'webkit', 'This feature is slow on Mac');
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('slow in WebKit', async ({ page, browserName }) => {
  test.slow(browserName === 'webkit', 'This feature is slow on Mac');
  // ...
});
```

</TabItem>
</Tabs>

## test.slow(callback[, description]) {#test-slow-3}
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-3-option-condition"/> &#60;[function]\([Fixtures]\):[boolean]&#62; A function that returns whether to mark as "slow", based on test fixtures. Test or tests are marked as "slow" when the return value is `true`.<a href="#test-slow-3-option-condition" class="list-anchor">#</a>
- `description?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-3-option-description"/> &#60;[string]&#62; Optional description that will be reflected in a test report.<a href="#test-slow-3-option-description" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-slow-3-return"/> &#60;[void]&#62;<a href="#test-slow-3-return" class="list-anchor">#</a>

Conditionally mark all tests in a file or [test.describe(title, callback)](./api/class-test.mdx#test-describe) group as "slow". Slow tests will be given triple the default timeout.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.slow(({ browserName }) => browserName === 'webkit');

test('slow in WebKit 1', async ({ page }) => {
  // ...
});
test('fail in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.slow(({ browserName }) => browserName === 'webkit');

test('slow in WebKit 1', async ({ page }) => {
  // ...
});
test('slow in WebKit 2', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>

## test.step(title, body) {#test-step}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-step-option-title"/> &#60;[string]&#62; Step name.<a href="#test-step-option-title" class="list-anchor">#</a>
- `body`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-step-option-body"/> &#60;[function]\([]\):[Promise]<[Object]>&#62; Step body.<a href="#test-step-option-body" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-step-return"/> &#60;[Promise]<[void]>&#62;<a href="#test-step-return" class="list-anchor">#</a>

Declares a test step.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test('test', async ({ page }) => {
  await test.step('Log in', async () => {
    // ...
  });
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test('test', async ({ page }) => {
  await test.step('Log in', async () => {
    // ...
  });
});
```

</TabItem>
</Tabs>

## test.use(options) {#test-use}
- `options`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-use-option-fixtures"/> &#60;[TestOptions]&#62; An object with local options.<a href="#test-use-option-fixtures" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-use-return"/> &#60;[void]&#62;<a href="#test-use-return" class="list-anchor">#</a>

Specifies options or fixtures to use in a single test file or a [test.describe(title, callback)](./api/class-test.mdx#test-describe) group. Most useful to set an option, for example set `locale` to configure `context` fixture. `test.use` can be called either in the global scope or inside `test.describe`, it's is an error to call it within `beforeEach` or `beforeAll`.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.use({ locale: 'en-US' });

test('test with locale', async ({ page }) => {
  // Default context and page have locale as specified
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.use({ locale: 'en-US' });

test('test with locale', async ({ page }) => {
  // Default context and page have locale as specified
});
```

</TabItem>
</Tabs>

It is also possible to override a fixture by providing a function.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```ts
import { test, expect } from '@playwright/test';

test.use({
  locale: async ({}, use) => {
    // Read locale from some configuration file.
    const locale = await fs.promises.readFile('test-locale', 'utf-8');
    await use(locale);
  },
});

test('test with locale', async ({ page }) => {
  // Default context and page have locale as specified
});
```

</TabItem>
<TabItem value="js">

```js
const { test, expect } = require('@playwright/test');

test.use({
  locale: async ({}, use) => {
    // Read locale from some configuration file.
    const locale = await fs.promises.readFile('test-locale', 'utf-8');
    await use(locale);
  },
});

test('test with locale', async ({ page }) => {
  // Default context and page have locale as specified
});
```

</TabItem>
</Tabs>

## test.expect {#test-expect}
- type: &#60;[Object]&#62;

`expect` function can be used to create test assertions. Read [expect library documentation](https://jestjs.io/docs/expect) for more details.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
